src/tests/transcripts/errors/sort_mismatched_types.sif
sort {1, 2, "three"}
(-- error
can't compare string three and integer 2
--)